<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">



        <ImageView
            android:id="@+id/BlurImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/colorPrimary"
            android:scaleType="centerCrop"/>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">


            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/logowhite"
                android:layout_gravity="center"/>



        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forget_title"
            android:textSize="30dp"
            app:fontFamily="@font/raleway_semibold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forget_des"
            app:fontFamily="@font/raleway_light" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">





                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email_place_holder"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="2dp"
                    app:startIconDrawable="@drawable/ic_envelope">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/forgot_et_username"
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forget_alert_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/alert"
                    app:fontFamily="@font/raleway_medium" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/forgot_btn_reset"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/submit_btn"/>

                <TextView
                    android:id="@+id/forgot_tv_goLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="12dp"
                    android:text="@string/forgot_goback"
                    android:textAlignment="center"
                    app:fontFamily="@font/raleway_medium" />














            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="end"
        android:layout_gravity="end">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/raleway_light"
            android:gravity="center"
            android:text="@string/owner_credits"
            android:textColor="@color/colorPrimary"></TextView>

    </LinearLayout>




</LinearLayout>