<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResetPasswordAuth">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">



        <ImageView
            android:id="@+id/BlurImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/colorPrimary"
            android:scaleType="centerCrop"/>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">


            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/logowhite"
                android:layout_gravity="center"/>



        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reset_title"
            android:textSize="30dp"
            app:fontFamily="@font/raleway_semibold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reset_des"
            app:fontFamily="@font/raleway_light" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">






                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/industry_password"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="2dp"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reset_auth_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/industry_password_re"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="2dp"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reset_auth_et_re_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/reset_auth_alert_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/alert"
                    app:fontFamily="@font/raleway_medium" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reset_auth_btn_submit"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/reset_btn"/>
















            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:gravity="end"
        android:layout_gravity="end">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/raleway_light"
            android:gravity="center"
            android:text="@string/owner_credits"
            android:textColor="@color/colorPrimary"></TextView>

    </LinearLayout>




</LinearLayout>

</FrameLayout>